--- a/launch.yml
+++ b/launch.yml
@@ -21,7 +21,8 @@
                       - device_name: /dev/xvda
                         volume_type: gp2
                         volume_size: 8
-                    wait: no
+                    wait: yes
+                    wait_timeout: 180
                     assign_public_ip: yes
                     vpc_subnet_id: subnet-e6550e9b
                     monitoring: no
@@ -32,6 +33,7 @@
                     key_name: awsmoonhome
                     aws_access_key: "{{ec2_access_key}}"
                     aws_secret_key: "{{ec2_secret_key}}"
+                    group: "{{group}}"
                     instance_type: t2.medium
                     image: ami-090f10efc254eaf55
                     region: eu-central-1
@@ -39,7 +41,8 @@
                       - device_name: /dev/xvda
                         volume_type: gp2
                         volume_size: 8
-                    wait: no
+                    wait: yes
+                    wait_timeout: 240
                     assign_public_ip: yes
                     vpc_subnet_id: subnet-e6550e9b
                     monitoring: no
@@ -50,6 +53,7 @@
                     key_name: awsmoonhome
                     aws_access_key: "{{ec2_access_key}}"
                     aws_secret_key: "{{ec2_secret_key}}"
+                    group: "{{group}}"
                     instance_type: t2.medium
                     image: ami-090f10efc254eaf55
                     region: eu-central-1
@@ -57,7 +61,8 @@
                       - device_name: /dev/xvda
                         volume_type: gp2
                         volume_size: 8
-                    wait: no
+                    wait: yes
+                    wait_timeout: 240
                     assign_public_ip: yes
                     vpc_subnet_id: subnet-e6550e9b
                     monitoring: no
