--- a/launch.yml
+++ b/launch.yml
@@ -21,7 +21,7 @@
                         volume_type: gp2
                         volume_size: 8
                     wait: yes
-                    wait_timeout: 300
+                    wait_timeout: 360
                     assign_public_ip: yes
                     vpc_subnet_id: subnet-e6550e9b
                     monitoring: no
@@ -41,7 +41,7 @@
                         volume_type: gp2
                         volume_size: 8
                     wait: yes
-                    wait_timeout: 300
+                    wait_timeout: 360
                     assign_public_ip: yes
                     vpc_subnet_id: subnet-e6550e9b
                     monitoring: no
@@ -61,23 +61,21 @@
                         volume_type: gp2
                         volume_size: 8
                     wait: yes
-                    wait_timeout: 300
+                    wait_timeout: 360
                     assign_public_ip: yes
                     vpc_subnet_id: subnet-e6550e9b
                     monitoring: no
             register: ec2
           
           - name: Add public IPs to host group
-            add_host: hostname={{ item.public_ip }} groups=sandbox
-            loop: "{{ ec2.instances }}"
+            add_host:
+                    hostname: {{ item.public_ip }}
+                    groupname: sandbox
+            with_items: "{{ ec2.instances }}"
 
-- hosts: sandbox
-  name: test connections
-  user: ubuntu
-  become: true
-  gather_facts: true
-
-  tasks:
-          - name: Check connection
-            service: name=ntpd state=started
-
+          - name: Wait for the SSH to come up
+            delegate_to: "{{ item.public_dns_name }}"
+            wait_for_connection:
+                delay: 60
+                timeout: 320
+            with_items: "{{ ec2.instances }}"
