--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-#inventory      = /etc/ansible/hosts
+inventory      = /home/ubuntu/ansible-launch-ec2/hosts
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
@@ -19,7 +19,7 @@
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
 #forks          = 5
 #poll_interval  = 15
-#sudo_user      = root
+become_user      = ubuntu
 #ask_sudo_pass = True
 #ask_pass      = True
 #transport      = smart
@@ -33,7 +33,7 @@
 # smart - gather by default, but don't regather if already gathered
 # implicit - gather by default, turn off with gather_facts: False
 # explicit - do not gather by default, must say gather_facts: True
-#gathering = implicit
+#gathering = explicit
 
 # This only affects the gathering done by a play's gather_facts directive,
 # by default gathering retrieves all facts subsets
@@ -68,7 +68,7 @@
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-#host_key_checking = False
+host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
@@ -133,7 +133,7 @@
 
 # if set, always use this private key file for authentication, same as
 # if passing --private-key to ansible or ansible-playbook
-#private_key_file = /path/to/file
+private_key_file = /home/ubuntu/awsmoonhome.pem
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
@@ -339,7 +339,7 @@
 [privilege_escalation]
 #become=True
 #become_method=sudo
-#become_user=root
+#become_user=ubuntu
 #become_ask_pass=False
 
 [paramiko_connection]
