--- a/launch.yml
+++ b/launch.yml
@@ -27,6 +27,12 @@
                     monitoring: no
             register: ec2
 
+          - name: Add new instance to host group
+            add_host:
+                    hostname: "{{ item.public_ip }}"
+                    groupname: sandbox
+            with_items: "{{ ec2.instances }}"
+
           - name: Launch t2.medium for Zabbix
             ec2:
                     key_name: awsmoonhome
@@ -47,6 +53,12 @@
                     monitoring: no
             register: ec2
 
+          - name: Add new instance to host group
+            add_host:
+                    hostname: "{{ item.public_ip }}"
+                    groupname: sandbox
+            with_items: "{{ ec2.instances }}"
+           
           - name: Launch t2.medium for ELK
             ec2:
                     key_name: awsmoonhome
@@ -67,11 +79,18 @@
                     monitoring: no
             register: ec2
           
-          - name: Add public IPs to host group
+          - name: Add new instance to host group
             add_host:
-                    hostname: {{ item.public_ip }}
+                    hostname: "{{ item.public_ip }}"
                     groupname: sandbox
             with_items: "{{ ec2.instances }}"
+
+
+            #          - name: Add public IPs to host group
+            #            add_host:
+            #                    hostname: "{{ item.public_ip }}"
+            #                    groupname: sandbox
+            #            with_items: "{{ ec2.instances }}"
 
           - name: Wait for the SSH to come up
             delegate_to: "{{ item.public_dns_name }}"
